--- a/package.json
+++ b/package.json
@@ -1,42 +1,15 @@
 {
-  "name": "liveschool",
-  "version": "1.0.0",
-  "description": "social networking app for KTU",
-  "main": "app.js",
-  "scripts": {
-    "webpack": "nodejs ./node_modules/webpack/bin/webpack.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "muhammed shasin",
-  "license": "ISC",
-  "dependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
-    "express-messages": "^1.0.1",
-    "express-validator": "^3.1.2",
-    "morgan": "^1.7.0",
-    "multer": "^1.3.0",
-    "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "redux": "^3.6.0",
-    "socket.io": "^1.7.2",
-    "webpack": "^1.14.0"
-  },
-  "devDependencies": {}
+    "name": "imad-2016-base",
+    "version": "0.1.0",
+    "description": "IMAD 2016 course app",
+    "main": "server.js",
+    "scripts": {
+         "test": "echo \"Error: no test specified\" && exit 1"
+     },
+     "author": "",
+     "license": "ISC",
+     "dependencies": {
+         "express": ">=4.14.0",
+         "morgan": ">=1.7.0"
+     }
 }
